--- a/mp/index.html
+++ b/mp/index.html
@@ -13,7 +13,7 @@
     <body>
 
 
-        <audio src="" autoplay>Your browser does not support the audio element.
+        <audio src="./music/BGM.mp3" autoplay>Your browser does not support the audio element.
 
         </audio>
 
